[project]
name = "whetstone-ml"
version = "0.0.1"
description = "This package supports a variety of machine learning validation and evaluation tasks."
authors = [{name = "David Hundley", email = "david.k.hundley@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/dkhundley/whetstone-ml"
Documentation = "https://github.com/dkhundley/whetstone-ml"

[tool.setuptools]
packages = ["whetstone"]